// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audits ItemCard Component Test renders ItemCard with images 1`] = `
<View
  style={
    Object {
      "marginTop": 2,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 80,
              "width": 80,
            },
          ]
        }
      >
        <Image
          onError={[Function]}
          resizeMode="contain"
          source={
            Object {
              "priority": "normal",
              "uri": "https://assets.sams.com.mx/image/upload/f_auto,q_auto:eco,w_350,c_scale,dpr_auto/mx/images/product-images/img_medium/1234m.jpg",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "tintColor": undefined,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View
        style={Object {}}
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 1234
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          test item
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.AUDITS.CURRENT_TOTAL" translation] 20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Audits ItemCard Component Test renders ItemCard without onHands quantity 1`] = `
<View
  style={
    Object {
      "marginTop": 2,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "paddingLeft": 10,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 1234
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          test item
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.AUDITS.CURRENT_TOTAL" translation] 20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Audits ItemCard Component Test renders default ItemCard when loading is false 1`] = `
<View
  style={
    Object {
      "marginTop": 2,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "paddingLeft": 10,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 1234
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          test item
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingRight": 5,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#616161",
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 12,
              }
            }
          >
            [missing "en.ITEM.ON_HANDS" translation] 12
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.AUDITS.CURRENT_TOTAL" translation] 20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Audits ItemCard Component Test renders default ItemCard when loading is false and there is a positive pendingQty 1`] = `
<View
  style={
    Object {
      "marginTop": 2,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "paddingLeft": 10,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 1234
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          test item
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingRight": 5,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#616161",
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 12,
              }
            }
          >
            [missing "en.ITEM.ON_HANDS" translation] 12
          </Text>
          <Text
            style={
              Object {
                "color": "#616161",
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 12,
              }
            }
          >
             (10)
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingRight": 5,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#e74517",
                  "fontSize": 12,
                },
                Object {
                  "paddingRight": 6,
                  "paddingTop": 2,
                },
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
          >
            
          </Text>
          <Text
            style={
              Object {
                "color": "#616161",
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 12,
              }
            }
          >
            [missing "en.ITEM.PENDING_MGR_APPROVAL" translation]
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.AUDITS.CURRENT_TOTAL" translation] 20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Audits ItemCard Component Test renders default ItemCard when loading is true 1`] = `
<View
  style={
    Object {
      "marginTop": 2,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#f4f4f9",
        "flexDirection": "row",
        "height": 60,
        "opacity": 1,
        "padding": 5,
      }
    }
    testID="itemCard"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="loader"
    >
      <ActivityIndicator
        size={30}
      />
    </View>
  </View>
</View>
`;

exports[`Audits ItemCard Component renders the item card without total quantity 1`] = `
<View
  style={
    Object {
      "marginTop": 2,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "paddingLeft": 10,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 12344
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          testing item
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingRight": 5,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#616161",
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontSize": 12,
              }
            }
          >
            [missing "en.ITEM.ON_HANDS" translation] 345
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Audits ItemCard Component tests rendering item card with worklist status 1`] = `
<View
  style={
    Object {
      "marginTop": 2,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffffff",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 5,
        "paddingLeft": 10,
        "width": "100%",
      }
    }
    testID="itemCard"
  >
    <View
      style={
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "space-around",
          "padding": 5,
        }
      }
      testID="item-details"
    >
      <View
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.GENERICS.ITEM" translation] 1234
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "marginVertical": 2,
            }
          }
        >
          test item
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#AAF0F2",
            "borderColor": "#eeeeee",
            "borderRadius": 4,
            "borderWidth": 1,
            "fontSize": 11,
            "marginVertical": 5,
            "paddingHorizontal": 8,
            "paddingVertical": 5,
          }
        }
      >
        <Text>
          [missing "en.AUDITS.AUDITS" translation] - [missing "en.AUDITS.IN_PROGRESS" translation]
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#616161",
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 12,
            }
          }
        >
          [missing "en.AUDITS.CURRENT_TOTAL" translation] 0
        </Text>
      </View>
    </View>
  </View>
</View>
`;
